<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="city">Enugu</string>
    <string name="temperature">Temp: 23</string>
    <string name="max_temp">max_temp : 51</string>
    <string name="min_temp">min_temp: 32</string>
    <string name="humidity">humidity : 60</string>
    <string name="search_title">Search for a city</string>
    <string name="hint_search">Enter a city name</string>
    <string name="submit">Submit</string>
</resources>
