<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_title"
                android:textStyle="bold"
                android:text="@string/search_title"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/search_text"
                android:layout_below="@+id/search_title"
                android:layout_width="match_parent"
                android:textStyle="italic"
                android:hint="@string/hint_search"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/submit_search"
                android:layout_below="@+id/search_text"
                android:text="@string/submit"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>